package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_ns_archive",
     "ocaml_module",
     "ppx_executable",
)

DEPS_1 = [
    "//compiler/lib:js_of_ocaml_compiler",
    "//lib/js_of_ocaml:js_of_ocaml",
    "@bytes//lib/bytes",
    "@ocaml//compiler-libs/bytecomp",
    "@ocaml//compiler-libs/toplevel"
]

#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(
    name       = "js_of_ocaml_toplevel",
    ns         = "js_of_ocaml_toplevel",
    manifest = [
        ":Js_of_ocaml_toplevel",
        ":JsooTop",
        ":JsooTopError",
        ":JsooTopPpx"
    ],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "JsooTop",
    struct        = "jsooTop.ml",
    sig           = "jsooTop.mli",
    deps          = DEPS_1 + [
        ":JsooTopError",
        ":JsooTopPpx"
    ],
    ppx           = ":ppx_1.exe",
)

ocaml_module(
    name          = "JsooTopError",
    struct        = "jsooTopError.ml",
    sig           = "jsooTopError.mli",
    deps          = DEPS_1,
    ppx           = ":ppx_1.exe",
)

ocaml_module(
    name          = "JsooTopPpx",
    struct        = "jsooTopPpx.ml",
    sig           = "jsooTopPpx.mli",
    deps          = DEPS_1,
    ppx           = ":ppx_1.exe",
)


ocaml_module(
    name          = "Js_of_ocaml_toplevel",
    struct        = "js_of_ocaml_toplevel.ml",
    deps          = DEPS_1 + [
        ":JsooTop"
    ],
    ppx           = ":ppx_1.exe",
)



###############
ppx_executable(
    name    = "ppx_1.exe",
    main    = ":Ppx_driver",
    deps = [
        "//compiler/ppx:ppx_optcomp_light",
        "//ppx/ppx_js/lib:ppx_js_rewriter"
    ],
)

#############
ocaml_module(
    name       = "Ppx_driver",
    struct     = ":ppx_driver.ml",
    visibility = ["//visibility:public"],
    deps       = ["@ppxlib//lib/ppxlib"],
)

########
genrule(
    name = "__ppx_driver__",
    outs = ["ppx_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ])
)

