package(default_visibility = ["//visibility:public"])

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

load("@rules_ocaml//build:rules.bzl",
     "ocaml_binary",
     "ocaml_library",
     "ocaml_ns_library",
     "ocaml_exec_module",
     "ocaml_module",
)

load("@rules_jsoo//build:rules.bzl", "jsoo_binary", "jsoo_library")

load("@aspect_rules_js//js:defs.bzl",
     "js_binary", "js_run_binary", "js_library", "js_test")

DEPS_1 = [
    "//lib/js_of_ocaml:js_of_ocaml",
    "//toplevel/lib:js_of_ocaml_toplevel"
]

OPTS_1 = [
        "-linkall"
]

##############################
####  Executable Targets  ####
ocaml_binary(
    name     = "test_toplevel.exe",
    main     = ":Test_toplevel",
    visibility = ["//visibility:public"],
    target_compatible_with = ["@ocaml//platforms:vm?"]
)

ocaml_exec_module(
    name          = "Test_toplevel",
    struct        = "test_toplevel.ml",
    opts          = OPTS_1,
    deps          = DEPS_1,
)

######################## Modules & Signatures ########################
############################# Rules ##################################

########
genrule(
    outs  = [
        "export.txt"
    ],
    name  = "__export.txt__",
    srcs  = [
        ":js_of_ocaml-toplevel",
        ":stdlib"
    ],
    cmd   = " ".join([
        "$(execpath //toplevel/bin:jsoo_listunits.exe)",
        "-o",
        "$(location export.txt)",
        "$(location :stdlib)",
        "$(location :js_of_ocaml-toplevel)",
    ]),
    exec_tools = [
        "//toplevel/bin:jsoo_listunits.exe"
    ]
)

########
genrule(
    outs  = [
        "test_toplevel.js"
    ],
    name  = "__test_toplevel.js__",
    srcs  = [
        ":+dynlink.js",
        ":+toplevel.js",
        ":shortvar",
        ":export.txt",
        ":test_toplevel.exe"
    ],
    cmd   = " ".join([
        "$(execpath //compiler/bin-js_of_ocaml:js_of_ocaml.exe)",
        "-I",
        "./",
        "--export",
        "$(location :export.txt)",
        "--toplevel",
        "--disable",
        "$(location :shortvar)",
        "$(location :+toplevel.js)",
        "$(location :+dynlink.js)",
        "$(location :test_toplevel.exe)",
        "-o",
        "$(location test_toplevel.js)",
    ]),
    exec_tools = [
        "//compiler/bin-js_of_ocaml:js_of_ocaml.exe"
    ]
)

##############
js_run_binary(
    name  = "__test_toplevel.referencejs__",
    tool  = ":test_toplevel.js",
    stdout  = "test_toplevel.referencejs"
)

##########
diff_test(
    name  = "test_toplevel.reference.diff_test",
    file1  = ":test_toplevel.reference",
    file2  = ":test_toplevel.referencejs"
)

